--- a/app/src/components/test.scss
+++ b/app/src/components/test.scss
@@ -1,6 +1,6 @@
 .srd-demo-canvas{
-    height: 75%;
-    width: 75vw;
+    height: 100%;
+    width: 100%;
     // padding-left: 100px;
     // min-height: 300px;
     background-color: rgb(60,60,60) !important;
