--- a/app/src/App.css
+++ b/app/src/App.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-
+  border: 1px solid red;
 }
 .seperator{
   width: 75%;
