--- a/app/src/main.css
+++ b/app/src/main.css
@@ -84,8 +84,8 @@ html, body, #application {
 
 .custom-node-submenus {
 	display: flex;
+	align-content: center;
 	flex-direction: row;
-	justify-content: space-between;
 	color: #999999;
 	padding: 0 15px;
 	border-left: solid 2px #0c7cba;
@@ -98,12 +98,15 @@ html, body, #application {
 }
 
 .custom-node-submenus h2 {
+	flex-grow: 2;
 	font-style: italic;
 	font-family: 'LiberationSansRegular';
 }
 
 .custom-node-submenus img {
-	max-width: 25px;
+	/* width: 25px; */
+	height: 25px;
+	padding: 10px;
 }
 
 .line-in {
