Working on update - currently building with example code part 2

--- a/app/src/main.css
+++ b/app/src/main.css
@@ -28,9 +28,27 @@ html, body, #application {
 	height: 100%;
 }
 
+/*  */
+
+.ptag{
+	color: white;
+}
+
+.node {
+	display: flex;
+	flex-direction: column;
+	/* width: 200px; */
+	height: 200px;
+	background: green;
+}
+
+/*  */
+
 .custom-node {
 	display: flex;
 	flex-direction: column;
+	/* width: 200px; */
+	height: 200px;
 }
 
 .custom-node-nodeTitle {
